--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,13 +1,19 @@
 {
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.2",
     "express": "^4.18.2",
+    "mongodb": "^5.1.0",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "dev": "nodemon src/app.ts"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
