--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "node-cron": "^3.0.2",
